# cicd-lab

./: README.md
zappa/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
zappa/src/sentiment_analyser/: main.py
