[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment_analyser"
description = "Service for sentiment analysis."
requires-python = ">=3.12"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
